<resources>
    <string name="app_name">Facial Health</string>
    //Started Fragment
    <string name="swipe">swipe >></string>
    <string name="title_menu_1">What is Facial Health App?</string>
    <string name="title_menu_2">Help all your worries !!</string>
    <string name="title_menu_3">Simple design with modern style</string>
    <string name="title_menu_4">How are you curious?</string>

    <string name="desc_menu_1">Applications about find the best handling of facial disease for facial health </string>
    <string name="desc_menu_2">With the feature we give you, you can explore all facial desease with how to handle it... !!</string>
    <string name="desc_menu_3">The design is a simplification that is refined to make it easier and more interesting to access</string>
    <string name="desc_menu_4">" Come on now...."</string>
    <string name="learn_now">Lets Go...</string>
    <string name="title_welcome_page">Welcome to the Facial Health App</string>
    <string name="message_welcome_page">Check your Account or Create a new Account to be able to access the Facial Health application Now!</string>
    <string name="signup">signUp</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Fill Your Data Bellow :D</string>
    <string name="name">Name</string>

    <string name="message_login_page">Login Now mate !!</string>
    <string name="error_empty_email">" Invalid Email"</string>
    <string name="length_character">Password must be more than 6 characters</string>
    <string name="permission_not_granted">Permission not granted</string>

    <string name="logout">Logout</string>
    <string name="wrong_credential">Wrong username or password</string>
    <string name="register_success">Register Success please Login</string>
    <string name="register_field">Registration Failed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">"Ready to use our App? "</string>
    <string name="splash">Splash</string>
    <string name="cd_capture">button to capture</string>
    <string name="cd_gallery">button to galery</string>
    <string name="cd_switch_camera">button to switch camera</string>
    <string name="welcome">Hi, %i$s</string>
    <string name="gallery">Gallery</string>
    <string name="greetingTittle">Selamat Datang</string>
    <string name="greetingDesc">Pilih salah satu tombol dibawah untuk memulai aplikasi</string>
    <string name="title_profile">profile</string>
    <string name="title_setting">Setting</string>
    <string name="setting">setting</string>
    <string name="set_language">Setting Language</string>
    <string name="title_home">Home</string>
    <string name="camera">Camera</string>
    <string name="error_pick_image">Error pick image</string>
    <string name="error_showing_camera">Error showing camera</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_success">Upload success</string>
    <string name="cd_preview">preview Picture</string>
    <string name="detecbutton">Detect Now !!</string>
    <string name="detecting">detecting</string>
    <string name="detail">DetailI Image</string>
    <string name="title_description">Tittle Description</string>
</resources>