<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/greenLight"
        app:layout_collapseMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/bg_profile_user"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_ellipse_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:contentDescription="@string/title_profile" />

    <ImageView
        android:id="@+id/iv_avatarProfile"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/bg_profile_user"
        app:layout_constraintEnd_toEndOf="@+id/bg_profile_user"
        app:layout_constraintStart_toStartOf="@+id/bg_profile_user"
        app:layout_constraintTop_toTopOf="@+id/bg_profile_user"
        android:contentDescription="@string/title_profile" />

    <TextView
        android:id="@+id/tv_nameProfile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bg_profile_user"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/bg_profile_user"
        app:layout_constraintTop_toBottomOf="@+id/bg_profile_user" />

    <TextView
        android:id="@+id/tv_emailProfile"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_nameProfile"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/tv_nameProfile"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>