<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".home.DetailFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="450dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_detailAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/detail"
                android:scaleType="centerCrop"
                android:transitionName="detail_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView

                android:id="@+id/tv_faceDisease"
                android:transitionName="detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/name"
                android:text="@string/name"
                android:textColor="@color/bottom_nav_item_color_state"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_detailDesc"
                app:layout_constraintEnd_toEndOf="@+id/tv_detailDesc"
                app:layout_constraintStart_toStartOf="@+id/tv_detailDesc"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_detailDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/title_description"
                android:text="@string/title_description"
                android:textColor="@color/bottom_nav_item_color_state"
                android:textSize="20sp"
                android:transitionName="detail_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>